[gd_scene load_steps=10 format=2]

[ext_resource path="res://UpgradeUI.gd" type="Script" id=1]
[ext_resource path="res://MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://Fonts/comic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://art/IconPhone.png" type="Texture" id=4]
[ext_resource path="res://art/IconFaceTime.png" type="Texture" id=5]
[ext_resource path="res://art/IconSpeech.png" type="Texture" id=6]
[ext_resource path="res://art/Border.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=2]
radius = 224.617

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 3600.0
margin_bottom = 2400.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.298039 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -72.0
margin_top = 1500.0
margin_right = 2728.0
margin_bottom = 2500.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.54902 )

[node name="Border" type="Sprite" parent="."]
position = Vector2( 1351, 1960 )
texture = ExtResource( 7 )

[node name="PhoneMenu" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PhoneMenu"]
position = Vector2( 1199, 1691 )
shape = SubResource( 2 )

[node name="IconPhone" type="Sprite" parent="PhoneMenu"]
position = Vector2( 1172, 1672 )
scale = Vector2( 1.7, 1.7 )
texture = ExtResource( 4 )

[node name="SpeechMenu" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpeechMenu"]
position = Vector2( 1765, 1680 )
shape = SubResource( 2 )

[node name="IconSpeech" type="Sprite" parent="SpeechMenu"]
position = Vector2( 1750, 1664 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="FaceTimeMenu" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FaceTimeMenu"]
position = Vector2( 2381, 1691 )
shape = SubResource( 2 )

[node name="IconFaceTime" type="Sprite" parent="FaceTimeMenu"]
position = Vector2( 2415, 1708 )
scale = Vector2( 1.7, 1.7 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = 875.0
margin_top = -17.0
margin_right = 1532.0
margin_bottom = 256.0
rect_scale = Vector2( 3, 3 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.509804 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 7
custom_fonts/font = SubResource( 1 )
text = "Upgrade!"
align = 1

[node name="Label6" type="Label" parent="."]
margin_left = 2332.0
margin_top = 455.0
margin_right = 3188.0
margin_bottom = 728.0
rect_rotation = -14.0628
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.509804 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 7
custom_fonts/font = SubResource( 1 )
text = "For your deck!"
align = 1

[node name="Label2" type="Label" parent="."]
margin_left = 100.0
margin_top = 1516.0
margin_right = 757.0
margin_bottom = 1789.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.509804 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 7
custom_fonts/font = SubResource( 1 )
text = "Deck:"

[node name="Label7" type="Label" parent="."]
margin_left = 206.0
margin_top = 1825.0
margin_right = 897.0
margin_bottom = 2188.0
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.509804 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 7
custom_fonts/font = SubResource( 1 )
text = "Select your
card-type"
align = 2

[node name="UpgradeContainer" type="Node2D" parent="."]

[node name="Label3" type="Label" parent="."]
margin_left = 989.0
margin_top = 1939.0
margin_right = 1151.0
margin_bottom = 2215.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.792157 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "0 : 
1 : 
2 : "

[node name="Values02" type="Label" parent="."]
margin_left = 1169.0
margin_top = 1939.0
margin_right = 1331.0
margin_bottom = 2215.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.792157 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "$0$
$1$ 
$2$ "

[node name="Label4" type="Label" parent="."]
margin_left = 1580.0
margin_top = 1939.0
margin_right = 1742.0
margin_bottom = 2215.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.792157 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "3 : 
4 : 
5 : "

[node name="Values03" type="Label" parent="."]
margin_left = 1760.0
margin_top = 1939.0
margin_right = 1922.0
margin_bottom = 2215.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.792157 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "$3$
$4$ 
$5$ "

[node name="Label5" type="Label" parent="."]
margin_left = 2180.0
margin_top = 1939.0
margin_right = 2342.0
margin_bottom = 2215.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.792157 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "6 : 
7 : 
8 : "

[node name="Values04" type="Label" parent="."]
margin_left = 2360.0
margin_top = 1939.0
margin_right = 2522.0
margin_bottom = 2215.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.792157 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "$6$
$7$ 
$8$ "

[connection signal="mouse_entered" from="PhoneMenu" to="." method="_on_PhoneMenu_mouse_entered"]
[connection signal="mouse_entered" from="SpeechMenu" to="." method="_on_SpeechMenu_mouse_entered"]
[connection signal="mouse_entered" from="FaceTimeMenu" to="." method="_on_FaceTimeMenu_mouse_entered"]
